Make sure .site-header__profile-type doesn't overflow

--- a/src/css/minside/_organisms/_site-header.css
+++ b/src/css/minside/_organisms/_site-header.css
@@ -29,5 +29,11 @@
     position: relative;
     top: -0.3rem;
     color: var(--light-gray);
+    width: 170px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
+    vertical-align: text-bottom;
   }
 }
