--- a/src/minside.css
+++ b/src/minside.css
@@ -6162,6 +6162,12 @@ a.card.active .icon, a.card.active .card__header, a.card:hover .icon, a.card:hov
   position:relative;
   top:-0.3rem;
   color:#ededed;
+  width:170px;
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  display:inline-block;
+  vertical-align:text-bottom;
 }
 .sidebar{
   -webkit-order:1;
